default-node-filtering-options/node-affinity/pod-all-security-levels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: security_level
            operator: Exists
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
