default-node-filtering-options/node-affinity/pod-multiple-security-levels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: security_level
            operator: In
            values:
            - "2"
            - "3"
            - "4"
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
