mutate-and-validate-node-filtering/node-affinity/policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNodeAffinity
metadata:
  name: secure-scheduling-with-node-affinity
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-*"]
  parameters:
    nodeAffinityKeys: ["security_level"]
