mutate-and-validate-node-filtering/node-affinity/policy/pod-no-match-expr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchFields:
          - key: metadata.name
            operator: In
            values:
            - minikube
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
