mutate-and-validate-node-filtering/node-affinity/policy/pod-no-required-scheduling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  affinity:
    nodeAffinity:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
